--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -29,6 +29,8 @@
     href: tutorial-url-redirect-cli.md
   - name: Autoscaling and zone redundant
     href: tutorial-autoscale-ps.md
+  - name: Create an Application Gateway – ILB ASE
+    href: application-gateway-create-gateway-ilb-ase.md
 - name: Samples
   items:
   - name: Azure PowerShell
