--- a/articles/service-fabric-mesh/TOC.yml
+++ b/articles/service-fabric-mesh/TOC.yml
@@ -66,7 +66,7 @@
     href: service-fabric-mesh-howto-auto-scale-services.md
   - name: Store state with Azure Files volume
     href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md  
-  - name: Use reliable collections in your Service Fabric Mesh app
+  - name: Store state with reliable collections (.NET)
     href: service-fabric-mesh-howto-reliable-collections.md
   - name: Manage secrets
     href: service-fabric-mesh-howto-manage-secrets.md
