--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -122,6 +122,8 @@
         href: active-directory-b2c-custom-setup-adfs2016-idp.md
       - name: Salesforce
         href: active-directory-b2c-setup-sf-app-custom.md
+    - name: Track user behavior
+      href: active-directory-b2c-custom-guide-eventlogger-appins.md
     - name: User flows
       items:
       - name: Configure user input
@@ -273,8 +275,6 @@
     href: b2clogin.md
   - name: Use the Azure AD Graph API
     href: active-directory-b2c-devquickstarts-graph-dotnet.md
-  - name: Track user behavior
-    href: active-directory-b2c-custom-guide-eventlogger-appins.md
   - name: Web apps
     items:
     - name: ASP.NET
@@ -284,8 +284,7 @@
     - name: ASP.NET
       href: active-directory-b2c-devquickstarts-api-dotnet.md
     - name: Call a .NET Web API
-      href: active-directory-b2c-devquickstarts-web-api-dotnet.md
-  
+      href: active-directory-b2c-devquickstarts-web-api-dotnet.md 
   - name: Reference
     items:
     - name: Code samples
@@ -300,6 +299,8 @@
       href: active-directory-b2c-support-create-directory.md
     - name: Extensions app
       href: active-directory-b2c-reference-extensions-app.md
+    - name: User flow versions
+      href: user-flow-versions.md
 - name: Resources
   items:
   - name: Azure Roadmap
