--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -138,8 +138,6 @@
       items:
       - name: Introduction
         href: sql-api-introduction.md
-      - name: Write SQL queries
-        href: sql-api-sql-query.md
       - name: Model document data
         href: modeling-data.md
       - name: Tutorials
@@ -446,6 +444,8 @@
         href: how-to-create-container.md
       - name: Query a container
         href: how-to-query-container.md
+      - name: Write SQL queries
+        href: how-to-sql-query.md
     - name: Best practices
       items:
       - name: Performance tips
