--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -67,7 +67,7 @@
         href: tenant-restrictions.md
     - name: Single sign-on
       href: what-is-single-sign-on.md
-    - name: End-user portal experiences
+    - name: End-user portals
       href: end-user-experiences.md
   - name: How-to guides
     items:
