--- a/articles/cognitive-services/QnAMaker/index.yml
+++ b/articles/cognitive-services/QnAMaker/index.yml
@@ -12,10 +12,10 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/12/2018
+  ms.date: 11/10/2018
   ms.author: tulasim
 abstract:
-  description: <a href="https://qnamaker.ai">QnA Maker</a> enables you to power a question and answer service from your semi-structured content like FAQ documents or URLs and product manuals.
+  description: QnA Maker enables you to power a question and answer service from your semi-structured content like FAQ documents or URLs and product manuals.
 sections:
 - title: 5-Minute Quickstarts
   items:
