--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -476,31 +476,31 @@
     - name: Overview
       items:
       - name: Introduction
-        href: introduction.md
+        href: ../data-lake-storage/introduction.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Quickstarts
       items:
       - name: Create a Data Lake Storage Gen2 capable Storage account
-        href: quickstart-create-account.md
+        href: ../data-lake-storage/quickstart-create-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Create/connect Databricks account
-        href: quickstart-create-databricks-account.md
+        href: ../data-lake-storage/quickstart-create-databricks-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Create an HDInsight cluster
-        href: quickstart-create-connect-hdi-cluster.md
+        href: ../data-lake-storage/quickstart-create-connect-hdi-cluster.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Tutorials
       items:
       - name: Extract, transform, and load data using Azure Databricks
-        href: handle-data-using-databricks.md
+        href: ../data-lake-storage/handle-data-using-databricks.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Access Data Lake Storage data with Databricks using Spark
-        href: using-databricks-spark.md
+        href: ../data-lake-storage/using-databricks-spark.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Extract, transform, and load data using Apache Hive on Azure HDInsight
-        href: tutorial-extract-transform-load-hive.md
+        href: ../data-lake-storage/tutorial-extract-transform-load-hive.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Concepts
       items:
       - name: The Azure Blob FileSystem driver for Hadoop
-        href: abfs-driver.md
+        href: ../data-lake-storage/abfs-driver.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Introduction to the Azure Blob File System URI
-        href: introduction-abfs-uri.md
+        href: ../data-lake-storage/introduction-abfs-uri.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: The Hierarchical Namespace Service
-        href: namespace.md
+        href: ../data-lake-storage/namespace.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Security
         items:
           - name: Encryption for data at rest
@@ -508,17 +508,17 @@
           - name: Encryption for data at rest with customer keys
             href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
       - name: Data Lake Storage Gen2 evaluation
-        href: evaluation.md
+        href: ../data-lake-storage/evaluation.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: How-to guides
       items:
       - name: Use Data Lake Storage Gen2 with Azure HDInsight clusters
-        href: use-hdi-cluster.md
+        href: ../data-lake-storage/use-hdi-cluster.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Use Hadoop File System CLI with Data Lake Storage Gen2
-        href: use-hdfs-data-lake-storage.md
+        href: ../data-lake-storage/use-hdfs-data-lake-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Ingest data
         items: 
           - name: Copy data into Data Lake Storage Gen2 using Distcp
-            href: use-distcp.md
+            href: ../data-lake-storage/use-distcp.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Copy data into Data Lake Storage Gen2 using Azure Data Factory
             href: ../../data-factory/load-azure-data-lake-storage-gen2.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
       - name: Connect to Azure Databricks
