--- a/articles/cyclecloud/toc.yml
+++ b/articles/cyclecloud/toc.yml
@@ -185,6 +185,8 @@
     items:
     - name: Current Release
       href: release-notes.md
+    - name: v7.6.0
+      href: ~/release-notes/7-6-0.md
     - name: v7.5.5
       href: ~/release-notes/7-5-5.md
     - name: v7.5.4
