--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -99,6 +99,8 @@
       href: protect-with-drm.md
   - name: Configure Postman
     href: media-rest-apis-with-postman.md
+  - name: Scale Media Reserved Units - CLI
+    href: media-reserved-units-cli-how-to.md
 - name: Reference
   items:
   - name: OpenAPI Specification (Swagger)
