--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -29,7 +29,7 @@
     href: tutorial-url-redirect-cli.md
   - name: Autoscaling and zone redundant
     href: tutorial-autoscale-ps.md
-  - name: Create an Application Gateway in Aure – ILB ASE
+  - name: Troublehshoot an Application Gateway in Aure – ILB ASE
     href: application-gateway-create-gateway-internal-load-balancer-app-service-environment.md
 - name: Samples
   items:
