--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -51,7 +51,10 @@
       - name: Go
         href: Quickstarts/get-answer-from-kb-go.md 
       - name: Java
-        href: Quickstarts/get-answer-from-kb-java.md    
+        href: Quickstarts/get-answer-from-kb-java.md 
+      - name: Node.js
+        href: Quickstarts/get-answer-from-kb-nodejs.md 
+    
 - name: Tutorials
   items: 
   - name: Create and answer from KB
