Fixing links and minor updates

--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -71,12 +71,38 @@
     items:
     - name: Working with Azure Cosmos DB account
       href: account-overview.md
-    - name: Working with databases, containers, and items
-      href: databases-containers-items.md
+    - name: Containers and items
+      items:
+      - name: Working with databases, containers, and items
+        href: databases-containers-items.md
+      - name: Indexing
+        items:
+        - name: Overview
+          href: indexing-overview.md
+        - name: Indexing policy
+          href: indexing-policies.md
+        - name: Index types
+          href: index-types.md
+        - name: Index paths
+          href: index-paths.md
+      - name: Change feed
+        items:
+        - name: Overview
+          href: change-feed.md
+        - name: Reading change feed
+          href: change-feed-reading.md
+        - name: Change feed processor
+          href: change-feed-processor.md
+        - name: Change feed with Azure Functions 
+          href: change-feed-functions.md
+      - name: Time to live
+        href: time-to-live.md
+      - name: Unique key constraints
+        href: unique-keys.md
+      - name: Transactions and optimistic concurrency
+        href: database-transactions-optimistic-concurrency.md
     - name: Resource model
       href: sql-api-resources.md
-    - name: Transactions and Optimistic concurrency
-      href: database-transactions-optimistic-concurrency.md
     - name: Global distribution
       items:
       - name: Overview
@@ -111,30 +137,6 @@
         href: request-units.md
       - name: Provision throughput on containers and databases
         href: set-throughput.md
-    - name: Indexing
-      items:
-      - name: Overview
-        href: indexing-overview.md
-      - name: Indexing policy
-        href: indexing-policies.md
-      - name: Index types
-        href: index-types.md
-      - name: Index paths
-        href: index-paths.md
-    - name: Change feed
-      items:
-      - name: Overview
-        href: change-feed.md
-      - name: Reading change feed
-        href: change-feed-reading.md
-      - name: Change feed processor
-        href: change-feed-processor.md
-      - name: Change feed with Azure Functions 
-        href: change-feed-functions.md
-    - name: Time to live
-      href: time-to-live.md
-    - name: Unique key constraints
-      href: unique-keys.md
     - name: Security
       items:
         - name: Overview
@@ -420,9 +422,9 @@
       href: how-to-time-to-live.md
     - name: Global distribution
       items:
-      - name: Manage Consistency
+      - name: Manage consistency
         href: how-to-manage-consistency.md
-      - name: Manage Conflicts
+      - name: Manage conflicts
         href: how-to-manage-conflicts.md
     - name: Provisioned throughput
       items:
