--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -259,6 +259,12 @@
       "url": "https://github.com/Azure-Samples/cognitive-services-java-sdk-samples",
       "branch": "master",
       "branch_mapping": {}
+    },
+    {
+      "path_to_root": "aml-sdk-samples",
+      "url": "https://github.com/Azure/MachineLearningNotebooks",
+      "branch": "sdk-codetest",
+      "branch_mapping": {}
     }
   ],
   "branch_target_mapping": {
