--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -501,12 +501,20 @@
         href: ../data-lake-storage/introduction-abfs-uri.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: The Hierarchical Namespace Service
         href: ../data-lake-storage/namespace.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Best practices
+        href: storage-data-lake-storage-best-practices.md
       - name: Security
         items:
           - name: Encryption for data at rest
             href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
           - name: Encryption for data at rest with customer keys
             href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
+          - name: Authenticate with Azure AD
+            href: ../common/storage-auth-add-adlsg2.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
+          - name: Access Control in Azure Data Lake Storage Gen2
+            href: storage-data-lake-storage-access-control.md
+          - name: Configure firewalls and virtual networks 
+            href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Data Lake Storage Gen2 evaluation
         href: ../data-lake-storage/evaluation.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: How-to guides
