--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -69,7 +69,7 @@
         href: create-table-python.md
   - name: Concepts
     items:
-    - name: Working with Azure Cosmos DB account
+    - name: Working with Azure Cosmos account
       href: account-overview.md
     - name: Containers and items
       items:
@@ -80,7 +80,7 @@
         - name: Overview
           href: indexing-overview.md
         - name: Indexing policy
-          href: indexing-policy.md
+          href: index-policy.md
         - name: Index types
           href: index-types.md
         - name: Index paths
@@ -90,7 +90,7 @@
         - name: Overview
           href: change-feed.md
         - name: Reading change feed
-          href: change-feed-reading.md
+          href: read-change-feed.md
         - name: Change feed processor
           href: change-feed-processor.md
         - name: Change feed with Azure Functions 
