--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -57,6 +57,8 @@
       href: transforms-jobs-concept.md
   - name: Examining storage accounts
     href: storage-account-concept.md
+  - name: Filters and dynamic manifests
+    href: filters-dynamic-manifest-overview.md
   - name: Handling Event Grid events
     href: reacting-to-media-services-events.md      
   - name: Protecting content
