--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -492,6 +492,10 @@
       href: ../data-factory/connector-azure-sql-database.md?toc=/azure/sql-database/toc.json
   - name: Manage file space
     href: sql-database-file-space-management.md
+  - name: Use Resource Health for connectivity issues
+    href: sql-database-resource-health.md
+  - name: Plan for Azure maintenance events
+    href: sql-database-planned-maintenance.md
   - name: Develop apps
     items:
     - name: Connectivity
