--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -61,10 +61,14 @@
     items:
     - name: For cluster operators
       items:
-      - name: Access and identity
-        href: operator-best-practices-identity.md
-      - name: Security and upgrades
-        href: operator-best-practices-security.md
+      - name: Cluster security
+        href: operator-best-practices-cluster-security.md
+      - name: Container security
+        href: operator-best-practices-container-security.md
+    - name: For application developers
+      items:
+      - name: Pod security
+        href: developer-best-practices-pod-security.md
   - name: Quotas and regional limits
     href: container-service-quotas.md
   - name: Migrate from ACS to AKS
