--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -589,6 +589,8 @@
         items:
         - name: Upgrade the Service Fabric version 
           href: service-fabric-cluster-upgrade-version-azure.md    
+        - name: Upgrade cluster configuration
+          href: service-fabric-cluster-config-upgrade-azure.md
         - name: Patch cluster nodes (Windows)
           href: service-fabric-patch-orchestration-application.md
         - name: Patch cluster nodes (Linux)
