--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -41,6 +41,8 @@
       href: tutorial-nodejs-mongodb-app.md
     - name: Python with Postgres
       href: tutorial-python-postgresql-app.md
+    - name: Java Enterprise with Postgres
+      href: tutorial-java-enterprise-postgresql-app.md
   - name: Multi-container app
     href: tutorial-multi-container-app.md
   - name: Custom Docker image
