--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -477,6 +477,10 @@
       items:
       - name: Introduction
         href: ../data-lake-storage/introduction.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Processing big data
+        href: ../data-lake-storage/data-scenarios.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Working with open source applications
+        href: ../data-lake-storage/compatible-oss-other-applications.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Quickstarts
       items:
       - name: Create a Data Lake Storage Gen2 capable Storage account
@@ -521,6 +525,10 @@
             href: ../data-lake-storage/use-distcp.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Copy data into Data Lake Storage Gen2 using Azure Data Factory
             href: ../../data-factory/load-azure-data-lake-storage-gen2.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
+      - name: Performance
+        items: 
+          - name: Use Storm on HDInsight
+            href: ../data-lake-storage/performance-tuning-storm.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Connect to Azure Databricks
         href: https://docs.azuredatabricks.net/spark/latest/data-sources/azure/azure-datalake-gen2.html
     - name: Reference
