--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -231,17 +231,21 @@
     - name: Clusters overview
       href: service-fabric-deploy-anywhere.md
     - name: Cluster security
-      href: service-fabric-cluster-security.md
-    - name: Scaling
-      href: service-fabric-cluster-scaling.md
+      href: service-fabric-cluster-security.md    
     - name: Feature differences between Linux and Windows
       href: service-fabric-linux-windows-differences.md
     - name: Clusters on Azure
       items:
       - name: Node types and VM Scale Sets
         href: service-fabric-cluster-nodetypes.md
+      - name: Scaling
+        href: service-fabric-cluster-scaling.md
       - name: Cluster networking patterns
         href: service-fabric-patterns-networking.md
+    - name: Standalone clusters
+      items:
+      - name: Scaling
+        href: service-fabric-cluster-scaling-standalone.md
     - name: Cluster resource manager
       items:
       - name: Cluster resource manager overview
