--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -184,7 +184,7 @@
       href: custom-translator/quickstart-build-deploy-custom-model.md
   - name: Concepts
     items:
-    - name: Workspace and projects
+    - name: Workspace and project
       href: custom-translator/workspace-and-project.md
     - name: Parallel documents
       href: custom-translator/what-are-parallel-documents.md
@@ -228,7 +228,7 @@
       href: custom-translator/faq.md
     - name: Pricing
       href: https://azure.microsoft.com/pricing/details/cognitive-services/translator-text-api/
-    - name: Stackoverflow
+    - name: Stack Overflow
       href: https://stackoverflow.com/questions/tagged/microsoft-translator
-    - name: Uservoice
+    - name: UserVoice
       href: https://cognitive.uservoice.com/knowledgebase/articles/1855897-custom-translator-preview-resource-guide
