--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -533,6 +533,10 @@
             href: ../data-lake-storage/performance-tuning-mapreduce.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Connect to Azure Databricks
         href: https://docs.azuredatabricks.net/spark/latest/data-sources/azure/azure-datalake-gen2.html
+          - name: Transfer data
+          items:
+            - name: AzCopy (v10)
+              href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
     - name: Reference
       items:
       - name: REST
