--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -627,13 +627,9 @@
           - name: Windows classic deployments
             tocHref: /azure/virtual-machines/windows/classic/
             topicHref: /azure/virtual-machines/windows/classic/
-      - name: SQL
+      - name: SQL VM
         tocHref: /azure/virtual-machines/windows/sql
         topicHref: /azure/virtual-machines/windows/sql
-        items:
-         - name: SQL on Azure Virtual Machine
-           tocHref: /azure/virtual-machines/windows/sql
-           topicHref: /azure/virtual-machines/windows/sql
   - name: Virtual Network
     tocHref: /azure/virtual-network/
     topicHref: /azure/virtual-network/
