--- a/articles/service-fabric-mesh/TOC.yml
+++ b/articles/service-fabric-mesh/TOC.yml
@@ -52,6 +52,8 @@
     href: service-fabric-mesh-howto-setup-developer-environment-sdk.md
   - name: Set up Service Fabric Mesh CLI
     href: service-fabric-mesh-howto-setup-cli.md
+  - name: Store state with Service Fabric Reliable Disk
+    href: service-fabric-mesh-howto-deploy-app-reliabledisk-volume.md
   - name: Store state with Azure Files volume
     href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md
   - name: Independently scale microservices in an app
@@ -79,4 +81,3 @@
     href: https://azure.microsoft.com/updates/?product=service-fabric-mesh
   - name: Regional availability
     href: https://azure.microsoft.com/regions/services/
- 
