--- a/articles/cyclecloud/index.yml
+++ b/articles/cyclecloud/index.yml
@@ -2,7 +2,7 @@
 documentType: LandingData
 title: Azure CycleCloud
 metadata:
-  title: CycleCloud Documentation - QuickStarts, Concepts, Resources | Microsoft Docs
+  title: CycleCloud Documentation - Quickstarts, Concepts, Resources | Microsoft Docs
   description: Azure CycleCloud is designed to provide secure and flexible cloud HPC and Big Compute environments to users with dynamic scaling of clusters.
   services: cyclecloud
   author: KimliW
@@ -11,7 +11,7 @@ metadata:
   ms.devlang: na
   ms.topic: conceptual
   ms.date: 08/01/2018
-  ms.author: a-kiwels
+  ms.author: adjohnso
 abstract:
   description: Azure CycleCloud is designed to enable enterprise IT organizations to provide secure and flexible cloud HPC and Big Compute environments to their end users. With dynamic scaling of clusters, the business can get the resources it needs at the right time and the right price. Azure CycleCloud’s automated configuration enables IT to focus on providing service to the business users.
   aside:
@@ -37,7 +37,7 @@ sections:
           html: <p>New to Azure CycleCloud? Start here for a guided walkthrough of the installation, setup, and use of Azure CycleCloud.</p>
           image:
             src: media/index/i_quick-start.svg
-          title: QuickStarts
+          title: Quickstarts
         - href: clusters
           html: <p>Learn how Azure CycleCloud uses Cluster Templates to create and scale your jobs quickly and easily.</p>
           image:
