--- a/articles/cyclecloud/toc.yml
+++ b/articles/cyclecloud/toc.yml
@@ -4,7 +4,7 @@
   items:
   - name: What is Azure CycleCloud?
     href: overview.md
-- name: QuickStarts
+- name: Quickstarts
   items:
   - name: Install and Setup
     href: quickstart-install-cyclecloud.md
@@ -185,7 +185,9 @@
     items:
     - name: Current Release
       href: release-notes.md
-      name: v7.5.5
+    - name: v7.6.0
+      href: ~/release-notes/7-6-0.md
+    - name: v7.5.5
       href: ~/release-notes/7-5-5.md
     - name: v7.5.4
       href: ~/release-notes/7-5-4.md
