--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -506,11 +506,11 @@
       - name: Security
         items:
           - name: Encryption for data at rest
-            href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
+            href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Encryption for data at rest with customer keys
-            href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
+            href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Authenticate with Azure AD
-            href: ../common/storage-auth-aad-adlsg2.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
+            href: ../common/storage-auth-aad-adlsg2.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Access Control in Azure Data Lake Storage Gen2
             href: storage-data-lake-storage-access-control.md
           - name: Configure firewalls and virtual networks 
