--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -80,5 +80,7 @@
     href: active-directory-troubleshooting-support-howto.md
   - name: Azure Active Directory FAQ
     href: active-directory-faq.md
+  - name: Archive for What's new? in Azure AD
+    href: whats-new-archive.md    
   - name: Azure Active Directory deployment plans
     href: active-directory-deployment-plans.md    
