--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -505,6 +505,8 @@
         href: storage-data-lake-storage-best-practices.md
       - name: Security
         items:
+          - name: Big data analytics security guide
+            href: ../common/storage-data-lake-storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Encryption for data at rest
             href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           - name: Encryption for data at rest with customer keys
