--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -82,7 +82,7 @@
     - name: From a local file - .NET
       href: job-input-from-local-file-how-to.md  
   - name: Create filters
-    item:
+    items:
     - name: With .NET
       href: filters-dynamic-manifest-dotnet-howto.md
     - name: With REST
