--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -102,7 +102,7 @@
     - name: Virtual Machines
       href: ../monitoring/monitoring-vminsights-overview.md?toc=/azure/azure-monitor/toc.json
     - name: Monitoring solutions
-      href: solutions-inventory.md
+      href: insights/solutions-inventory.md
   - name: Analyze data
     items: 
     - name: Log Analytics
@@ -583,7 +583,7 @@
         - name: Disable monitoring
           href: ../monitoring/monitoring-vminsights-optout.md?toc=/azure/azure-monitor/toc.json
       - name: Agent Health
-        href: solution-agenthealth.md
+        href: insights/solution-agenthealth.md
       - name: Capacity and performance
         href: ../log-analytics/log-analytics-capacity.md?toc=/azure/azure-monitor/toc.json
       - name: VMware Analytics
@@ -613,7 +613,7 @@
       - name: DNS
         href: ../log-analytics/log-analytics-dns.md?toc=/azure/azure-monitor/toc.json
       - name: Office 365
-        href: solution-office-365.mdn
+        href: insights/solution-office-365.md
       - name: Assess Operations Manager
         href: ../log-analytics/log-analytics-scom-assessment.md?toc=/azure/azure-monitor/toc.json
       - name: Surface Hub
@@ -621,9 +621,9 @@
     - name: Use monitoring solutions
       items:
       - name: Overview
-        href: solutions.md
+        href: insights/solutions.md
       - name: Target solutions
-        href: solution-targeting.md
+        href: insights/solution-targeting.md
   - name: Visualize data
     items:
     - name: Views
@@ -886,17 +886,17 @@
     - name: Monitoring solutions
       items:
       - name: Design and build
-        href: solutions-creating.md
+        href: insights/solutions-creating.md
       - name: Solution file
-        href: solutions-solution-file.md
+        href: insights/solutions-solution-file.md
       - name: Automation resources
-        href: solutions-resources-automation.md
+        href: insights/solutions-resources-automation.md
       - name: Log searches and alerts
-        href: solutions-resources-searches-alerts.md
+        href: insights/solutions-resources-searches-alerts.md
       - name: Views
-        href: solutions-resources-views.md
+        href: insights/solutions-resources-views.md
       - name: Best practices
-        href: solutions-best-practices.md
+        href: insights/solutions-best-practices.md
       - name: Collect monitoring data from a runbook
         href: ../monitoring/monitoring-runbook-datacollect.md?toc=/azure/azure-monitor/toc.json
 - name: Reference
