--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -73,7 +73,7 @@
           href: try-review-api-workflow.md
     - name: Human in the loop
       href: Review-Tool-User-Guide/human-in-the-loop.md
-    - name: Use settings
+    - name: Review tool settings
       href: Review-Tool-User-Guide/Configure.md
     - name: Manage team
       href: Review-Tool-User-Guide/SubTeams.md
