standardize Review tool terminology

--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -71,7 +71,7 @@
           href: try-review-api-review.md
         - name: Workflows - API console
           href: try-review-api-workflow.md
-    - name: Human in the loop
+    - name: Review tool overview
       href: Review-Tool-User-Guide/human-in-the-loop.md
     - name: Review tool settings
       href: Review-Tool-User-Guide/Configure.md
